--- a/index.html
+++ b/index.html
@@ -11,8 +11,22 @@
     <title>Lustaflow</title>
   </head>
   <body>
-    <h1>Hola, Cannas!</h1>
-
+    <h1>Hola!</h1>
+    <!-- Aqui he posat la "card" targeta de presentació-->
+    <div class="card text-center">
+      <div class="card-header">
+        Me quieres conocer?
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Haz Click</h5>
+        <p class="card-text">Con la colaboración de tu dedo y ratón</p>
+        <a href="#" class="btn btn-primary">AQUI!</a>
+      </div>
+      <div class="card-footer text-muted">
+        2 days ago
+      </div>
+    </div>
+    <!-- Aqui he acabat la "card" targeta de presentació--> 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
