--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Lustaflow</title>
   </head>
   <body>
-    <h1>Hola!</h1>
+    <h1>Bienvenid@ a mi página </h1>
     <!-- Aqui he posat la "card" targeta de presentació-->
     <div class="card text-center">
       <div class="card-header">
