--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="card-body">
         <h5 class="card-title">Haz Click</h5>
         <p class="card-text">Con la colaboración de tu dedo y ratón</p>
-        <a href="#" class="btn btn-primary">AQUI!</a>
+        <a href="has-entrado.html" class="btn btn-primary">AQUI!</a>
       </div>
       <div class="card-footer text-muted">
         Cuando te de la gana
