--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="has-entrado.html" class="btn btn-primary">AQUI!</a>
       </div>
       <div class="card-footer text-muted">
-        Cuando te de la gana
+        Cuándo te de la gana
       </div>
     </div>
     <!-- Aqui he acabat la "card" targeta de presentació--> 
