--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <!-- Aqui he posat la "card" targeta de presentació-->
     <div class="card text-center">
       <div class="card-header">
-        Me quieres conocer?
+        ¿Me quieres conocer?
       </div>
       <div class="card-body">
-        <h5 class="card-title">Haz Click</h5>
-        <p class="card-text">Con la colaboración de tu dedo y ratón</p>
+        <h5 class="card-title">Haz Click...</h5>
+        <p class="card-text">...con la colaboración de tu dedo y ratón...</p>
         <a href="has-entrado.html" class="btn btn-primary">AQUI!</a>
       </div>
       <div class="card-footer text-muted">
-        Cuándo te de la gana
+        ¡Cuándo te dé la gana!
       </div>
     </div>
     <!-- Aqui he acabat la "card" targeta de presentació--> 
