--- a/has-entrado.html
+++ b/has-entrado.html
@@ -10,7 +10,7 @@
  <title>Has entrado a Lustaflow</title>
   </head>
   <body>
-    <h1>Bienvenid@ a mi tarjeta de presentacion</h1>
+    <h1>Bienvenid@ a mi tarjeta de presentación</h1>
 
   <!-- Navbar comença -->  
 
@@ -33,7 +33,7 @@
               </li>
             </ul>
             <span class="navbar-text">
-              No te acostaras sin aprender nada nuevo
+              No te acostarás sin aprender nada nuevo
             </span>
           </div>
         </nav>
