--- a/has-entrado.html
+++ b/has-entrado.html
@@ -23,13 +23,13 @@
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Sobre mi<span class="sr-only"> (Info general)</span></a>
+                <a class="nav-link" href="sobre-mi.html">Sobre mi<span class="sr-only"> (Info general)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Habilidades</a>
+                <a class="nav-link" href="habilidades.html">Habilidades</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Proyectos</a>
+                <a class="nav-link" href="proyectos.html">Proyectos</a>
               </li>
             </ul>
             <span class="navbar-text">
