--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 	<html lang="es">
-		<head>
+	  <head>
 		 <!-- Required meta tags -->
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     	<!-- Bootstrap CSS -->
     	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-	<title>Sobre mi</title>
-		</head>
-<body>
+	
+		<title>Sobre mi</title>
+		
+	  </head>
+		
+<body class="text-center">
+	
+	<h1> Algunos datos sobre mi</h1>
+		
+		<p>Nací a finales de los 80 en Sitges, un pequeño pueblo de la costa catalana.<br>Siempre he estado muy interesado en las ciencias y la tecnologia, aunque un poco desconectado del tema, la física ha sido siempre una de mis disciplinas favoritas.
+		</p>
 
+		<ul class="list-group">
+  			<li class="list-group-item">Bachiller Tecnológico</li>
+  			<li class="list-group-item">Educador en tiempo libre</li>
+ 			<li class="list-group-item">Dibujante aficionado</li>
+  			<li class="list-group-item">Skateboard</li>
+  			<li class="list-group-item">Gaming</li>
+  			<li class="list-group-item">Aprendiendo HTML CSS y PHP</li>
+		</ul>	
+
+		<iframe width="854" height="480" src="https://www.youtube.com/embed/CXJEzIFN-_4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </body>
 </html>
