--- a/has-entrado.html
+++ b/has-entrado.html
@@ -10,7 +10,7 @@
  <title>Has entrado a Lustaflow</title>
   </head>
   <body>
-    <h1>Bienvenid@ a mi tarjeta de presentación</h1>
+
 
   <!-- Navbar comença -->  
 
@@ -23,7 +23,7 @@
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="sobre-mi.html">Sobre mi<span class="sr-only"> (Info general)</span></a>
+                <a class="nav-link" href="has-entrado.html">Sobre mi<span class="sr-only"> (Info general)</span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="habilidades.html">Habilidades</a>
