--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <title>Lustaflow</title>
   </head>
-  <body>
+  <body class="text-center"
+  >
     <h1>Bienvenid@ a mi página </h1>
     <!-- Aqui he posat la "card" targeta de presentació-->
     <div class="card text-center">
