--- a/habilidades.html
+++ b/habilidades.html
@@ -9,7 +9,15 @@
     	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 	<title>Habilidades</title>
 		</head>
-<body>
+<body class="text-center">
+<ul class="list-group">
+  			
+ 			<li class="list-group-item">Dibujante aficionado</li>
+  			<li class="list-group-item">Skateboard</li>
+  			<li class="list-group-item">Gaming</li>
+  		
+		</ul>	
 
+		<iframe width="854" height="480" src="https://www.youtube.com/embed/CXJEzIFN-_4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 </body>
 </html>
