--- a/index.html
+++ b/index.html
@@ -10,9 +10,26 @@
 
     <title>Lustaflow</title>
   </head>
-  <body class="text-center"
-  >
-    <h1>Bienvenid@ a mi página </h1>
+
+  <body>
+
+  <!-- Navbar comença -->  
+
+        <nav class="navbar navbar-dark bg-dark">
+  <!-- Navbar content -->    
+          <a class="navbar-brand" href="index.html">Bienvenid@!</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+            <span class="navbar-text">
+              "No te acostarás sin aprender nada nuevo"
+            </span>
+          </div>
+        </nav>
+<h1 class="text-center">Soy Jordi Lostaló Alcázar</h1>
+
+    <h1 class="text-center"> "Lustaflow" </h1>
     <!-- Aqui he posat la "card" targeta de presentació-->
     <div class="card text-center">
       <div class="card-header">
@@ -24,7 +41,7 @@
         <a href="has-entrado.html" class="btn btn-primary">AQUI!</a>
       </div>
       <div class="card-footer text-muted">
-        ¡Cuándo te dé la gana!
+        ¡Gracias por tu visita!
       </div>
     </div>
     <!-- Aqui he acabat la "card" targeta de presentació--> 
