--- a/has-entrado.html
+++ b/has-entrado.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 
- <title>Has entrado a Lustaflow</title>
+ <title>Lustaflow/Sobre mi</title>
   </head>
   <body>
 
@@ -16,7 +16,7 @@
 
         <nav class="navbar navbar-dark bg-dark">
   <!-- Navbar content -->    
-          <a class="navbar-brand" href="#">Selecciona entre los apartados</a>
+          <a class="navbar-brand" href="index.html">Lustaflow</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -33,13 +33,21 @@
               </li>
             </ul>
             <span class="navbar-text">
-              No te acostarás sin aprender nada nuevo
+              "No te acostarás sin aprender nada nuevo"
             </span>
           </div>
         </nav>
-
+<h1 class="text-center">Jordi Lostaló Alcázar "Lustaflow"</h1>
    <!-- Navbar acaba -->       
 
+        <ul class="text-center" class="list-group">
+        
+          <li class="list-group-item">Bachiller Tecnologico</li>
+          <li class="list-group-item">Educador en tiempo Libre </li>
+          <li class="list-group-item">Skater</li>
+          <li class="list-group-item">Ayudante de cocina</li>
+          <li class="list-group-item">Aprendiendo HTML, CSS y PHP</li>
+        </ul> 
  <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
