--- a/has-entrado.html
+++ b/has-entrado.html
@@ -47,6 +47,7 @@
           <li class="list-group-item">Skater</li>
           <li class="list-group-item">Ayudante de cocina</li>
           <li class="list-group-item">Aprendiendo HTML, CSS y PHP</li>
+          <li class="list-group-item"><a href="https://github.com/lustaflow">Github</a></li>
         </ul> 
  <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
