--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="has-entrado.html" class="btn btn-primary">AQUI!</a>
       </div>
       <div class="card-footer text-muted">
-        ¡Gracias por tu visita!
+        ¡Gracias por tu visita! (En construcción)
       </div>
     </div>
     <!-- Aqui he acabat la "card" targeta de presentació--> 
