--- a/has-entrado.html
+++ b/has-entrado.html
@@ -51,7 +51,7 @@
 
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        Estudios de Secundaria y Bachiller Tecnologico, inscrito en Bellas Artes e Ingenieria Topografica; disciplinas que no me sedujeron. Durante la secundaria y mi etapa en la facultad de ingeniria realizé mis primeros pasos en el mundo de la programación, desde el simple VisualBasic hasta el Maple, en que trabajabamos con matrices vectoriales en las clases de cálculo.
       </div>
     </div>
   </div>
@@ -65,7 +65,7 @@
     </div>
     <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
       <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+       Entre mi graduación de bachiller y mis intentos Universitarios fallidos, realizé estudios de educación en el tiempo libre, para poder colaborar y trabajar de monitor en varios proyectos sociales y educativos.
       </div>
     </div>
   </div>
@@ -79,8 +79,8 @@
     </div>
     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
       <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-      </div>
+        La actividad física ha formado parte de mi vida muchos años con la practica del Skateboard durante màs de 15 años.<br>Una practica deportiva/filosofica que me ha enseñado a ser perseverante para alcanzar los objetivos y metas que me he marcado, y a darme cuenta de cuando no lo hice en el pasado fué un error.<br>He sido colaborador y miembro activo de varias asociaciones y entidades deportivas relacionadas con el skate y el surf. (faltan links e imagenes)
+      </div> 
     </div>
   </div>
   <div class="card">
@@ -93,7 +93,8 @@
     </div>
     <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
       <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        Soy de Sitges. La hosteleria a sido mi profesión mucho tiempo. Vivir en un pueblo de costa es lo que tiene...<br>Aún así he aprendido a valorar y querer esta sacrificada profesión, y como en el Skate, de ella he aprendido que en todo existe una progresión gradual, y hay que ser perseverante para progresar.<br>¡Además me encanta comer!
+        (faltan fotos y recetas)
       </div>
     </div>
     </div>
@@ -107,7 +108,7 @@
     </div>
     <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
       <div class="card-body">
-        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        Ahora mismo me encuentro involucrado en un proyecto con dos amigos y colaboradores relacionado con el mundo de la programación, CannaCode (meter link). Ellos són programadores con mucho más recorrido que yo y con muchos más conocimientos, y completmente autodidactas.<br>A lo que quiero llegar es a la relación entre el skate, la cocina y la programación en mi vida y pq ahora estoy involucrado en este proyecto; disciplinas que a pesar de poder aprenderlas a partir de un maestro o profesor, en mi caso ha sido en gran parte autodidacta, en la que hay que trabajar duro y ser perseverante para recoger los frutos y la satisfacción de ver nuestras metas alcanzadas.<br>¡Por todo esto, estoy dispuesto!
       </div>
     </div>
     </div>
