--- a/has-entrado.html
+++ b/has-entrado.html
@@ -51,10 +51,19 @@
 
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
       <div class="card-body">
-        Estudios de Secundaria y Bachiller Tecnologico, inscrito en Bellas Artes e Ingenieria Topografica; disciplinas que no me sedujeron. Durante la secundaria y mi etapa en la facultad de ingeniria realizé mis primeros pasos en el mundo de la programación, desde el simple VisualBasic hasta el Maple, en que trabajabamos con matrices vectoriales en las clases de cálculo.
+          <div class="card-deck">
+            <div class="card">
+            <img class="card-img-top" src="assets/benapres.jpg" alt="El instituto">
+                <div class="card-body">
+                  <h5 class="card-title">I.E.S. Joan Ramon Benaprés</h5>
+                  <p class="card-text">Estudios de Secundaria y Bachiller Tecnologico, inscrito en Bellas Artes e Ingenieria Topografica; disciplinas que no me sedujeron. Durante la secundaria y mi etapa en la facultad de ingeniria realizé mis primeros pasos en el mundo de la programación, desde el simple VisualBasic hasta el Maple, en que trabajabamos con matrices vectoriales en las clases de cálculo.</p>
+                </div>
+                <div class="card-footer">
+                <small class="text-muted">Lustaflow</small>
+                </div>
+            </div>
+          </div>
       </div>
-    </div>
-  </div>
   <div class="card">
     <div class="card-header" id="headingTwo">
       <h5 class="mb-0">
@@ -117,7 +126,38 @@
         <ul class="text-center" class="list-group">
           <li class="list-group-item"><a href="https://github.com/lustaflow">Github</a></li>
         </ul>
-
+<div class="card-deck">
+  <div class="card">
+    <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src=".../100px180/" alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 3 mins ago</small>
+    </div>
+  </div>
+</div>
  <!-- Optional JavaScript -->
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
