--- a/has-entrado.html
+++ b/has-entrado.html
@@ -38,81 +38,98 @@
           </div>
         </nav>
 <h1 class="text-center">Jordi Lostaló Alcázar "Lustaflow"</h1>
+   
    <!-- Navbar acaba -->       
+        
         <div class="accordion" id="accordionExample">
-  <div class="card">
-    <div class="card-header" id="headingOne">
-      <h5 class="mb-0">
-        <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Bachiller Tecnologico
-        </button>
-      </h5>
-    </div>
+            <div class="card">
+              <div class="card-header" id="headingZero">
+                <h5 class="mb-0">
+                  <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseZero">
+                    Algunos datos sobre mi
+                  </button>
+                </h5>
+              </div>
 
-    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-      <div class="card-body">
-        Estudios de Secundaria y Bachiller Tecnologico, inscrito en Bellas Artes e Ingenieria Topografica; disciplinas que no me sedujeron. Durante la secundaria y mi etapa en la facultad de ingeniria realizé mis primeros pasos en el mundo de la programación, desde el simple VisualBasic hasta el Maple, en que trabajabamos con matrices vectoriales en las clases de cálculo.
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingTwo">
-      <h5 class="mb-0">
-        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Educador en tiempo Libre
-        </button>
-      </h5>
-    </div>
-    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-      <div class="card-body">
-       Entre mi graduación de bachiller y mis intentos Universitarios fallidos, realizé estudios de educación en el tiempo libre, para poder colaborar y trabajar de monitor en varios proyectos sociales y educativos.
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingThree">
-      <h5 class="mb-0">
-        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Skater
-        </button>
-      </h5>
-    </div>
-    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-      <div class="card-body">
-        La actividad física ha formado parte de mi vida muchos años con la practica del Skateboard durante màs de 15 años.<br>Una practica deportiva/filosofica que me ha enseñado a ser perseverante para alcanzar los objetivos y metas que me he marcado, y a darme cuenta de cuando no lo hice en el pasado fué un error.<br>He sido colaborador y miembro activo de varias asociaciones y entidades deportivas relacionadas con el skate y el surf. (faltan links e imagenes)
-      </div> 
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header" id="headingFour">
-      <h5 class="mb-0">
-        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-          Ayudante de Cocina
-        </button>
-      </h5>
-    </div>
-    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
-      <div class="card-body">
-        Soy de Sitges. La hosteleria a sido mi profesión mucho tiempo. Vivir en un pueblo de costa es lo que tiene...<br>Aún así he aprendido a valorar y querer esta sacrificada profesión, y como en el Skate, de ella he aprendido que en todo existe una progresión gradual, y hay que ser perseverante para progresar.<br>¡Además me encanta comer!
-        (faltan fotos y recetas)
-      </div>
-    </div>
-    </div>
-    <div class="card">
-    <div class="card-header" id="headingFive">
-      <h5 class="mb-0">
-        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-          Aprendiz de HTML, CSS y PHP
-        </button>
-      </h5>
-    </div>
-    <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
-      <div class="card-body">
-        Ahora mismo me encuentro involucrado en un proyecto con dos amigos y colaboradores relacionado con el mundo de la programación, CannaCode (meter link). Ellos són programadores con mucho más recorrido que yo y con muchos más conocimientos, y completmente autodidactas.<br>A lo que quiero llegar es a la relación entre el skate, la cocina y la programación en mi vida y pq ahora estoy involucrado en este proyecto; disciplinas que a pesar de poder aprenderlas a partir de un maestro o profesor, en mi caso ha sido en gran parte autodidacta, en la que hay que trabajar duro y ser perseverante para recoger los frutos y la satisfacción de ver nuestras metas alcanzadas.<br>¡Por todo esto, estoy dispuesto!
-      </div>
-    </div>
-    </div>
-</div>
+              <div id="collapseZero" class="collapse show" aria-labelledby="headingZero" data-parent="#accordionExample">
+                <div class="card-body">
+                  descripcion
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingOne">
+                <h5 class="mb-0">
+                  <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne">
+                    Bachiller Tecnologico
+                  </button>
+                </h5>
+              </div>
+
+              <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                <div class="card-body">
+                  Estudios de Secundaria y Bachiller Tecnologico, inscrito en Bellas Artes e Ingenieria Topografica; disciplinas que no me sedujeron. Durante la secundaria y mi etapa en la facultad de ingeniria realizé mis primeros pasos en el mundo de la programación, desde el simple VisualBasic hasta el Maple, en que trabajabamos con matrices vectoriales en las clases de cálculo.
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingTwo">
+                <h5 class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo">
+                    Educador en tiempo Libre
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                <div class="card-body">
+                 Entre mi graduación de bachiller y mis intentos Universitarios fallidos, realizé estudios de educación en el tiempo libre, para poder colaborar y trabajar de monitor en varios proyectos sociales y educativos.
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingThree">
+                <h5 class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree">
+                    Skater
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                <div class="card-body">
+                  La actividad física ha formado parte de mi vida muchos años con la practica del Skateboard durante màs de 15 años.<br>Una practica deportiva/filosofica que me ha enseñado a ser perseverante para alcanzar los objetivos y metas que me he marcado, y a darme cuenta de cuando no lo hice en el pasado fué un error.<br>He sido colaborador y miembro activo de varias asociaciones y entidades deportivas relacionadas con el skate y el surf. (faltan links e imagenes)
+                </div> 
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header" id="headingFour">
+                <h5 class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour">
+                    Ayudante de Cocina
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+                <div class="card-body">
+                  Soy de Sitges. La hosteleria a sido mi profesión mucho tiempo. Vivir en un pueblo de costa es lo que tiene...<br>Aún así he aprendido a valorar y querer esta sacrificada profesión, y como en el Skate, de ella he aprendido que en todo existe una progresión gradual, y hay que ser perseverante para progresar.<br>¡Además me encanta comer!
+                  (faltan fotos y recetas)
+                </div>
+              </div>
+              </div>
+              <div class="card">
+              <div class="card-header" id="headingFive">
+                <h5 class="mb-0">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive">
+                    Aprendiz de HTML, CSS y PHP
+                  </button>
+                </h5>
+              </div>
+              <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+                <div class="card-body">
+                  Ahora mismo me encuentro involucrado en un proyecto con dos amigos y colaboradores relacionado con el mundo de la programación, CannaCode (meter link). Ellos són programadores con mucho más recorrido que yo y con muchos más conocimientos, y completmente autodidactas.<br>A lo que quiero llegar es a la relación entre el skate, la cocina y la programación en mi vida y pq ahora estoy involucrado en este proyecto; disciplinas que a pesar de poder aprenderlas a partir de un maestro o profesor, en mi caso ha sido en gran parte autodidacta, en la que hay que trabajar duro y ser perseverante para recoger los frutos y la satisfacción de ver nuestras metas alcanzadas.<br>¡Por todo esto, estoy dispuesto!
+                </div>
+              </div>
+              </div>
+          </div>
 
         <ul class="text-center" class="list-group">
           <li class="list-group-item"><a href="https://github.com/lustaflow">Github</a></li>
