--- a/has-entrado.html
+++ b/has-entrado.html
@@ -37,7 +37,6 @@
             </span>
           </div>
         </nav>
-<h1 class="text-center">Jordi Lostaló Alcázar "Lustaflow"</h1>
    
    <!-- Navbar acaba -->       
         
@@ -46,14 +45,15 @@
               <div class="card-header" id="headingZero">
                 <h5 class="mb-0">
                   <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseZero">
-                    Algunos datos sobre mi
+                    Jordi
                   </button>
                 </h5>
               </div>
 
               <div id="collapseZero" class="collapse show" aria-labelledby="headingZero" data-parent="#accordionExample">
                 <div class="card-body">
-                  descripcion
+                  <p>Nací el noviembre de 1988, en la localidad costera de Sitges, un pueblo turistíco abierto al mar, cosmopolita y con una notable actividad bohemia, artística y fiestera. El apodo de Lustaflow es una combinación de mi apellido y la palabra en "flow", en castellano fluír, que me otorgaron mis amigos y conocidos por mi afición al genero musical del rap y a la cultura hip hop que a representado una parte importante de mi vida.
+                  Así pues, siempre intentado "fluir" en el progreso personal y en el conocimiento, intentando escapar de la presión social impuesta.<br>Como decía el maestro Bruce Lee: Fluye como el agua, amigo... "Be water, my friend".</p>
                 </div>
               </div>
             </div>
