--- a/has-entrado.html
+++ b/has-entrado.html
@@ -52,8 +52,7 @@
 
               <div id="collapseZero" class="collapse show" aria-labelledby="headingZero" data-parent="#accordionExample">
                 <div class="card-body">
-                  <p>Nací el noviembre de 1988, en la localidad costera de Sitges, un pueblo turistíco abierto al mar, cosmopolita y con una notable actividad bohemia, artística y fiestera. El apodo de Lustaflow es una combinación de mi apellido y la palabra en "flow", en castellano fluír, que me otorgaron mis amigos y conocidos por mi afición al genero musical del rap y a la cultura hip hop que a representado una parte importante de mi vida.
-                  Así pues, siempre intentado "fluir" en el progreso personal y en el conocimiento, intentando escapar de la presión social impuesta.<br>Como decía el maestro Bruce Lee: Fluye como el agua, amigo... "Be water, my friend".</p>
+                  <p>Nac&iacute; el noviembre de 1988, en un pueblo turist&iacute;co abierto al mar, cosmopolita y con una notable actividad bohemia, art&iacute;stica y fiestera. El apodo de Lustaflow es una combinaci&oacute;n de mi apellido y la palabra en "flow", en castellano fluir, que me otorgaron mis amigos y conocidos por mi afici&oacute;n al genero musical del rap y a la cultura hip hop que ha representado una parte importante de mi vida.<br>As&iacute; pues, siempre intentado "fluir" en el progreso personal y en el conocimiento, intentando escapar de la presi&oacute;n social impuesta. Como dec&iacute;a el maestro Bruce Lee: Fluye como el agua, amigo... "Be water, my friend".</p>
                 </div>
               </div>
             </div>
