--- a/has-entrado.html
+++ b/has-entrado.html
@@ -40,7 +40,7 @@
    
    <!-- Navbar acaba -->       
         
-        <div class="accordion" id="accordionExample">
+        <div class="accordion" style="text-align: center;" id="accordionExample">
             <div class="card">
               <div class="card-header" id="headingZero">
                 <h5 class="mb-0">
@@ -52,7 +52,7 @@
 
               <div id="collapseZero" class="collapse show" aria-labelledby="headingZero" data-parent="#accordionExample">
                 <div class="card-body">
-                  <p>Nac&iacute; el noviembre de 1988, en un pueblo turist&iacute;co abierto al mar, cosmopolita y con una notable actividad bohemia, art&iacute;stica y fiestera. El apodo de Lustaflow es una combinaci&oacute;n de mi apellido y la palabra en "flow", en castellano fluir, que me otorgaron mis amigos y conocidos por mi afici&oacute;n al genero musical del rap y a la cultura hip hop que ha representado una parte importante de mi vida.<br>As&iacute; pues, siempre intentado "fluir" en el progreso personal y en el conocimiento, intentando escapar de la presi&oacute;n social impuesta. Como dec&iacute;a el maestro Bruce Lee: Fluye como el agua, amigo... "Be water, my friend".</p>
+                  <p>Nac&iacute; el noviembre de 1988, en un pueblo turist&iacute;co abierto al mar, cosmopolita y con una notable actividad bohemia, art&iacute;stica y fiestera. El apodo de Lustaflow es una combinaci&oacute;n de mi apellido y la palabra en "flow", en castellano fluir, que me otorgaron mis amigos y conocidos por mi afici&oacute;n al genero musical del rap y a la cultura hip hop que ha representado una parte importante de mi vida. As&iacute; pues, siempre intentado "fluir" en el progreso personal y en el conocimiento, intentando escapar de la presi&oacute;n social impuesta. Como dec&iacute;a el maestro Bruce Lee: Fluye como el agua, amigo... "Be water, my friend".</p>
                 </div>
               </div>
             </div>
@@ -66,6 +66,21 @@
               </div>
 
               <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+
+                  <div id="carouselExampleSlidesOnly" class="carousel slide" data-interval="3000" data-ride="carousel">
+                    <div class="carousel-inner rounded mx-auto d-block" style="width: 500px; height: 300px">
+                        <div class="carousel-item active">
+                          <img class="d-block w-100" src="./assets/frontbenapres.jpg">
+                        </div>
+                        <div class="carousel-item">
+                          <img class="d-block w-100" src="./assets/interiorbenapres.jpg">
+                        </div>
+                        <div class="carousel-item">
+                          <img class="d-block w-100" src="./assets/logo.jpg">
+                        </div>
+                    </div>
+                  </div>
+    
                 <div class="card-body">
                   Estudios de Secundaria y Bachiller Tecnologico, inscrito en Bellas Artes e Ingenieria Topografica; disciplinas que no me sedujeron. Durante la secundaria y mi etapa en la facultad de ingeniria realizé mis primeros pasos en el mundo de la programación, desde el simple VisualBasic hasta el Maple, en que trabajabamos con matrices vectoriales en las clases de cálculo.
                 </div>
