--- a/has-entrado.html
+++ b/has-entrado.html
@@ -67,7 +67,7 @@
 
               <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
 
-                  <div id="carouselExampleSlidesOnly" class="carousel slide" data-interval="3000" data-ride="carousel">
+                  <div id="carouselBachiller" class="carousel slide" data-interval="3000" data-ride="carousel">
                     <div class="carousel-inner rounded mx-auto d-block" style="width: 500px; height: 300px">
                         <div class="carousel-item active">
                           <img class="d-block w-100" src="./assets/frontbenapres.jpg">
@@ -82,10 +82,12 @@
                   </div>
     
                 <div class="card-body">
-                  Estudios de Secundaria y Bachiller Tecnologico, inscrito en Bellas Artes e Ingenieria Topografica; disciplinas que no me sedujeron. Durante la secundaria y mi etapa en la facultad de ingeniria realizé mis primeros pasos en el mundo de la programación, desde el simple VisualBasic hasta el Maple, en que trabajabamos con matrices vectoriales en las clases de cálculo.
+                  Estudios de Secundaria y Bachiller Tecnologico, inscrito en Bellas Artes e Ingenieria Topografica; disciplinas que no me sedujeron. Durante la secundaria y mi etapa en la facultad de ingeniria realizé mis primeros pasos en el mundo de la programación, a nivel muy rudimentario, desde el VisualBasic hasta el Maple, en que trabajabamos con matrices vectoriales en las clases de cálculo.
                 </div>
               </div>
             </div>
+
+
             <div class="card">
               <div class="card-header" id="headingTwo">
                 <h5 class="mb-0">
@@ -95,8 +97,20 @@
                 </h5>
               </div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+
+                 <div id="carouselLliure" class="carousel slide" data-interval="3000" data-ride="carousel">
+                    <div class="carousel-inner rounded mx-auto d-block" style="width: 500px; height: 300px">
+                        <div class="carousel-item active">
+                          <img class="d-block w-100" src="./assets/logoescola.jpg">
+                        </div>
+                        <div class="carousel-item">
+                          <img class="d-block w-100" src="./assets/idearilliure.jpg">
+                        </div>
+                    </div>
+                  </div>
+
                 <div class="card-body">
-                 Entre mi graduación de bachiller y mis intentos Universitarios fallidos, realizé estudios de educación en el tiempo libre, para poder colaborar y trabajar de monitor en varios proyectos sociales y educativos.
+                 Entre mi graduación de bachiller y mis intentos Universitarios fallidos, realizé estudios de educación en el tiempo libre, para poder colaborar y trabajar de monitor en varios proyectos sociales y educativos. Hice el curso de monitor en la Escola Lliure EL SOL, adherida al ideario del Movimiento Laico y Progresista
                 </div>
               </div>
             </div>
